Update email contact information in index.html

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 </div>
 
                 <div class="cta-buttons">
-                    <a href="/cdn-cgi/l/email-protection#b1d0c3c8d0dfd9d4dcd0dfd880868680f1d6dcd0d8dd9fd2dedc" class="btn btn-primary"><span class="__cf_email__" data-cfemail="ea8b98938b84828f878b8483dbdddddbaa8d878b8386c4898587">[email&#160;protected]</span></a>
+                    <a href="mailto:aryanhemani1771@gmail.com">aryanhemani1771@gmail.com</a>
                     <a href="#" class="btn btn-secondary">View Resume</a>
                 </div>
             </div>
@@ -675,7 +675,7 @@
                 <div class="contact-subtitle">Open to Data Scientist and Data Analyst opportunities</div>
                 
                 <div class="contact-grid">
-                    <a href="/cdn-cgi/l/email-protection#31504348505f59545c505f580006060071565c50585d1f525e5c" class="contact-card">
+                    <a href="mailto:aryanhemani1771@gmail.com">aryanhemani1771@gmail.com</a>
                         <div>📧</div>
                         <span class="contact-label">Email</span>
                     </a>
