Update email links with button styling

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 </div>
 
                 <div class="cta-buttons">
-                    <a href="mailto:aryanhemani1771@gmail.com">aryanhemani1771@gmail.com</a>
+                    <a href="mailto:aryanhemani1771@gmail.com" class="btn btn-primary"> aryanhemani1771@gmail.com </a>
                     <a href="#" class="btn btn-secondary">View Resume</a>
                 </div>
             </div>
@@ -675,7 +675,7 @@
                 <div class="contact-subtitle">Open to Data Scientist and Data Analyst opportunities</div>
                 
                 <div class="contact-grid">
-                    <a href="mailto:aryanhemani1771@gmail.com">aryanhemani1771@gmail.com</a>
+                    <a href="mailto:aryanhemani1771@gmail.com" class="contact-card">
                         <div>📧</div>
                         <span class="contact-label">Email</span>
                     </a>
