--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
                 <div class="cta-buttons">
                     <a href="mailto:aryanhemani1771@gmail.com" class="btn btn-primary"> aryanhemani1771@gmail.com </a>
-                    <a href="#" class="btn btn-secondary">View Resume</a>
+                    <a href="Resume.pdf" class="btn btn-secondary">View Resume</a>
                 </div>
             </div>
 
